added a login system using crispy forms and modified some files

--- a/dashboard/templates/dashboard/navbar.html
+++ b/dashboard/templates/dashboard/navbar.html
@@ -66,7 +66,7 @@
     <div class="dropdown" style="margin-left:-150px";>
       <button class="dropbtn" >Menu</button>
       <div class="dropdown-content">
-        <a href="#">Dashboard</a>
+        <a href="/dashboard">Dashboard</a>
         <a href="#">Live Result</a>
         <a href="#">Teaching Evaluation</a>
         <a href="#">Regestered Course</a>
