--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -15,7 +15,7 @@
 
 
     {% endif %}
-        <p>You Must Be Logged In. Click 
+        <p style="font-size: 30px ;margin: auto;">You Must Be Logged In. Click 
             <a href="/login">Here</a>
         </p>
 
