--- a/dashboard/templates/RegCourse/Registered.html
+++ b/dashboard/templates/RegCourse/Registered.html
@@ -32,10 +32,10 @@
         <form>
             <section style="padding-top: 10px; padding-left: 30px;">
                 
-                <select name="semester">
-                    <option value="sm">Summer 2020</option>
-                    <option value="sp">Spring 2020</option>
-                    <option value="fl">Fall 2020</option>
+                <select class="form-control1" name="semester">
+                    <option value="1">Summer 2020</option>
+                    <option value="2">Spring 2020</option>
+                    <option value="3">Fall 2020</option>
                 </select>
             </section>
         </form>
